# monero

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  command.py  setup.py  test
cmake/: CheckLinkerFlag.cmake  CheckTrezor.cmake  FindLibUSB.cmake  FindMiniupnpc.cmake  GitVersion.cmake  Version.cmake
contrib/epee/src/: CMakeLists.txt
src/: CMakeLists.txt  version.cpp
src/blocks/: CMakeLists.txt
src/checkpoints/: checkpoints.cpp
src/common/: CMakeLists.txt  perf_timer.cpp
src/cryptonote_core/: blockchain.cpp
src/daemon/: CMakeLists.txt
src/daemon2/: CMakeLists.txt
src/simplewallet/: simplewallet.cpp  simplewallet.h
src/wallet/: message_store.cpp  message_store.h
static_txt/: blocks.txt  easyloggig.txt  epee.txt  epee_readline.txt  monerod_objects.txt  randomx.txt  unbound.txt
tests/functional_tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
